--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Humanizer" version="1.37.7" targetFramework="net452" />
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
