--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -149,6 +149,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Application\DatabaseManager.cs" />
     <Compile Include="Common\FilesystemWatchCache.cs" />
     <Compile Include="Common\ObservableTrace.cs" />
     <Compile Include="Controls\IconControl.cs" />
@@ -178,7 +179,7 @@
       <DependentUpon>GameResultItemView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\UrlImage.cs" />
-    <Compile Include="GameManager.cs" />
+    <Compile Include="Application\GameManager.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Platform.cs" />
     <Compile Include="ViewModels\AppViewModel.cs" />
@@ -202,7 +203,7 @@
     <Compile Include="Views\Games\GamesView.xaml.cs">
       <DependentUpon>GamesView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SettingsManager.cs" />
+    <Compile Include="Application\SettingsManager.cs" />
     <Compile Include="Views\Games\GameItemView.xaml.cs">
       <DependentUpon>GameItemView.xaml</DependentUpon>
     </Compile>
