Added state machine for settings.

--- a/App.config
+++ b/App.config
@@ -32,13 +32,16 @@
                 <value>-1</value>
             </setting>
             <setting name="WindowHeight" serializeAs="String">
-                <value>720</value>
+                <value>730</value>
             </setting>
             <setting name="WindowWidth" serializeAs="String">
                 <value>900</value>
             </setting>
             <setting name="WindowMax" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="IsFirstRun" serializeAs="String">
+                <value>True</value>
             </setting>
         </VpdbAgent.Properties.Settings>
     </userSettings>
