--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -24,13 +24,16 @@
       <Value Profile="(Default)">-1</Value>
     </Setting>
     <Setting Name="WindowHeight" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">720</Value>
+      <Value Profile="(Default)">730</Value>
     </Setting>
     <Setting Name="WindowWidth" Type="System.Double" Scope="User">
       <Value Profile="(Default)">900</Value>
     </Setting>
     <Setting Name="WindowMax" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="IsFirstRun" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
