--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
   <package id="Humanizer" version="1.37.7" targetFramework="net452" />
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Config" version="4.1.2" targetFramework="net452" />
@@ -19,5 +21,6 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net452" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.2.1" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.13.1" targetFramework="net452" />
 </packages>
