--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="4.1.2" targetFramework="net452" />
+  <package id="akavache.core" version="4.1.2" targetFramework="net452" />
+  <package id="akavache.sqlite3" version="4.1.2" targetFramework="net452" />
   <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
   <package id="Humanizer" version="1.37.7" targetFramework="net452" />
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
@@ -21,6 +24,7 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net452" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="net452" />
   <package id="squirrel.windows" version="1.2.1" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.13.1" targetFramework="net452" />
 </packages>
