--- a/vpdb-agent.nuspec
+++ b/vpdb-agent.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>VpdbAgent</id>
-        <version>0.0.2</version>
+        <version>0.0.4</version>
         <authors>freezy</authors>
         <owners>freezy</owners>
         <licenseUrl>https://raw.githubusercontent.com/freezy/vpdb-agent/master/LICENSE</licenseUrl>
@@ -11,9 +11,16 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>VPDB Agent</description>
         <summary>A Windows desktop application that syncs local data with VPDB.</summary>
+        <releaseNotes>First Update.</releaseNotes>
         <language>en-US</language>
     </metadata>
     <files>
+        <file src="bin\Release\x64\sqlite3.dll" target="lib\net45\x64\sqlite3.dll" />
+        <file src="bin\Release\x86\sqlite3.dll" target="lib\net45\x86\sqlite3.dll" />
+        <file src="bin\Release\Akavache.dll" target="lib\net45\Akavache.dll" />
+        <file src="bin\Release\Akavache.Sqlite3.dll" target="lib\net45\Akavache.Sqlite3.dll" />
+        <file src="bin\Release\Akavache.Sqlite3.xml" target="lib\net45\Akavache.Sqlite3.xml" />
+        <file src="bin\Release\Akavache.xml" target="lib\net45\Akavache.xml" />
         <file src="bin\Release\DeltaCompressionDotNet.dll" target="lib\net45\DeltaCompressionDotNet.dll" />
         <file src="bin\Release\DeltaCompressionDotNet.MsDelta.dll" target="lib\net45\DeltaCompressionDotNet.MsDelta.dll" />
         <file src="bin\Release\DeltaCompressionDotNet.PatchApi.dll" target="lib\net45\DeltaCompressionDotNet.PatchApi.dll" />
@@ -42,6 +49,7 @@
         <file src="bin\Release\ReactiveUI.xml" target="lib\net45\ReactiveUI.xml" />
         <file src="bin\Release\Refit.dll" target="lib\net45\Refit.dll" />
         <file src="bin\Release\Splat.dll" target="lib\net45\Splat.dll" />
+        <file src="bin\Release\SQLitePCL.raw.dll" target="lib\net45\SQLitePCL.raw.dll" />
         <file src="bin\Release\Squirrel.dll" target="lib\net45\Squirrel.dll" />
         <file src="bin\Release\System.Reactive.Core.dll" target="lib\net45\System.Reactive.Core.dll" />
         <file src="bin\Release\System.Reactive.Core.xml" target="lib\net45\System.Reactive.Core.xml" />
