--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,7 @@ publish/
 # NuGet Packages
 *.nupkg
 !Releases/*.nupkg
+Releases/*.zip
 
 # The packages folder can be ignored because of Package Restore
 **/packages/*
