--- a/packages.config
+++ b/packages.config
@@ -13,6 +13,7 @@
   <package id="NLog" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Config" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.0.1" targetFramework="net452" />
+  <package id="OpenMcdf" version="2.0.5739.40493" targetFramework="net452" />
   <package id="PusherClient" version="0.3.0" targetFramework="net452" />
   <package id="reactiveui" version="6.5.0" targetFramework="net452" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
