--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -282,6 +282,7 @@
     </Compile>
     <Compile Include="Vpdb\DownloadJob.cs" />
     <Compile Include="Vpdb\DownloadManager.cs" />
+    <Compile Include="Vpdb\FlavorMatcher.cs" />
     <Compile Include="Vpdb\Models\Author.cs" />
     <Compile Include="Vpdb\Models\File.cs" />
     <Compile Include="Vpdb\Models\FileReference.cs" />
