--- a/packages.config
+++ b/packages.config
@@ -3,7 +3,9 @@
   <package id="akavache" version="4.1.2" targetFramework="net452" />
   <package id="akavache.core" version="4.1.2" targetFramework="net452" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="net452" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net452" />
   <package id="HashLib" version="2.0.1" targetFramework="net452" />
   <package id="Humanizer" version="1.37.7" targetFramework="net452" />
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
