Fixed startup links.

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -222,6 +222,8 @@
     <Compile Include="Application\Settings.cs" />
     <Compile Include="Application\VersionManager.cs" />
     <Compile Include="Controls\CachedImage.cs" />
+    <Compile Include="Libs\ShellLink\ShellLinkNative.cs" />
+    <Compile Include="Libs\ShellLink\ShellShortcut.cs" />
     <Compile Include="ViewModels\NotifyIconViewModel.cs" />
     <Compile Include="VisualPinball\BiffSerializer.cs" />
     <Compile Include="VisualPinball\VisualPinballManager.cs" />
