--- a/packages.config
+++ b/packages.config
@@ -11,6 +11,7 @@
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
+  <package id="Mindscape.Raygun4Net" version="5.1.1" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.1.2" targetFramework="net452" />
