--- a/vpdb-agent.nuspec
+++ b/vpdb-agent.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>VpdbAgent</id>
-        <version>0.0.4.1</version>
+        <version>0.0.5</version>
         <authors>freezy</authors>
         <owners>freezy</owners>
         <licenseUrl>https://raw.githubusercontent.com/freezy/vpdb-agent/master/LICENSE</licenseUrl>
@@ -38,6 +38,8 @@
         <file src="bin\Release\LoadingIndicators.WPF.dll" target="lib\net45\LoadingIndicators.WPF.dll" />
         <file src="bin\Release\MahApps.Metro.dll" target="lib\net45\MahApps.Metro.dll" />
         <file src="bin\Release\MahApps.Metro.xml" target="lib\net45\MahApps.Metro.xml" />
+        <file src="bin\Release\Mindscape.Raygun4Net.dll" target="lib\net45\Mindscape.Raygun4Net.dll" />
+        <file src="bin\Release\Mindscape.Raygun4Net4.dll" target="lib\net45\Mindscape.Raygun4Net4.dll" />
         <file src="bin\Release\Mono.Cecil.dll" target="lib\net45\Mono.Cecil.dll" />
         <file src="bin\Release\Mono.Cecil.Mdb.dll" target="lib\net45\Mono.Cecil.Mdb.dll" />
         <file src="bin\Release\Mono.Cecil.Pdb.dll" target="lib\net45\Mono.Cecil.Pdb.dll" />
