Moved Raygun dependencies into CrashManager and added log as custom info when reporting.

--- a/NLog.config
+++ b/NLog.config
@@ -14,7 +14,7 @@
         -->
 
         <target name="console" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
-             layout="[${threadid}] ${date} ${pad:padding=5:inner=${level:uppercase=true}} | ${message} ${exception:format=ToString}" >
+             layout="${pad:padding=4:inner=[${threadid}]} ${date} ${pad:padding=5:inner=${level:uppercase=true}} | ${message} ${exception:format=ToString}">
                 <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
                 <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
                 <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
@@ -22,9 +22,12 @@
                 <highlight-row condition="level == LogLevel.Error" foregroundColor="Blue" />
                 <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
         </target>
+
+        <target name="memory" xsi:type="Memory" layout="${pad:padding=4:inner=[${threadid}]} ${date} ${pad:padding=5:inner=${level:uppercase=true}} | ${message} ${exception:format=ToString}" />
     </targets>
 
     <rules>
         <logger name="*" minlevel="Trace" writeTo="console" />
+        <logger name="*" minlevel="Trace" writeTo="memory" />
     </rules>
 </nlog>
