--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -226,6 +226,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Application\CrashManager.cs" />
     <Compile Include="Application\DatabaseManager.cs" />
     <Compile Include="Application\MessageManager.cs" />
     <Compile Include="Application\PlatformManager.cs" />
