Sync all now throttles requests in order to avoid DOS.

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Application\Settings.cs" />
     <Compile Include="Application\VersionManager.cs" />
     <Compile Include="Common\Extensions\AkavacheAuthBitmapImageMixin.cs" />
+    <Compile Include="Common\Extensions\Rx.cs" />
     <Compile Include="Controls\CachedImage.cs" />
     <Compile Include="Libs\ShellLink\ShellLinkNative.cs" />
     <Compile Include="Libs\ShellLink\ShellShortcut.cs" />
