Prefixed VPDB models with Vpdb so I stop mixing up shit for once and for all!

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -320,22 +320,22 @@
     <Compile Include="Vpdb\Download\DownloadManager.cs" />
     <Compile Include="Vpdb\Download\JobManager.cs" />
     <Compile Include="Vpdb\Download\FlavorMatcher.cs" />
-    <Compile Include="Vpdb\Models\Author.cs" />
-    <Compile Include="Vpdb\Models\TableFile.cs" />
-    <Compile Include="Vpdb\Models\FileReference.cs" />
-    <Compile Include="Vpdb\Models\Flavor.cs" />
-    <Compile Include="Vpdb\Models\Game.cs" />
-    <Compile Include="Vpdb\Models\Image.cs" />
+    <Compile Include="Vpdb\Models\VpdbAuthor.cs" />
+    <Compile Include="Vpdb\Models\VpdbTableFile.cs" />
+    <Compile Include="Vpdb\Models\VpdbFile.cs" />
+    <Compile Include="Vpdb\Models\VpdbFlavor.cs" />
+    <Compile Include="Vpdb\Models\VpdbGame.cs" />
+    <Compile Include="Vpdb\Models\VpdbImage.cs" />
     <Compile Include="Vpdb\Models\Messages\RegisterRequest.cs" />
     <Compile Include="Vpdb\Models\Messages\RegisterResponse.cs" />
-    <Compile Include="Vpdb\Models\Thumb.cs" />
-    <Compile Include="Vpdb\Models\User.cs" />
-    <Compile Include="Vpdb\Models\Version.cs" />
+    <Compile Include="Vpdb\Models\VpdbThumb.cs" />
+    <Compile Include="Vpdb\Models\VpdbUser.cs" />
+    <Compile Include="Vpdb\Models\VpdbVersion.cs" />
     <Compile Include="Vpdb\Network\AuthenticatedHttpClientHandler.cs" />
     <Compile Include="Vpdb\Network\PusherAuthorizer.cs" />
     <Compile Include="Vpdb\Network\SnakeCasePropertyNamesContractResolver.cs" />
     <Compile Include="Vpdb\IVpdbApi.cs" />
-    <Compile Include="Vpdb\Models\Release.cs" />
+    <Compile Include="Vpdb\Models\VpdbRelease.cs" />
     <Compile Include="Vpdb\VpdbClient.cs" />
     <Page Include="Styles\NotifyIcon.xaml">
       <Generator>MSBuild:Compile</Generator>
