Added first failing test.

--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VpdbAgent</RootNamespace>
-    <AssemblyName>vpdb-agent</AssemblyName>
+    <AssemblyName>VpdbAgent</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -232,6 +232,7 @@
     <Compile Include="Application\PlatformManager.cs" />
     <Compile Include="Common\Extensions\Common.cs" />
     <Compile Include="Libs\Diff.cs" />
+    <Compile Include="PinballX\FileAccessManager.cs" />
     <Compile Include="Vpdb\RealtimeManager.cs" />
     <Compile Include="Application\Settings.cs" />
     <Compile Include="Application\VersionManager.cs" />
