--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Application\DatabaseManager.cs" />
     <Compile Include="Application\MessageManager.cs" />
     <Compile Include="Application\PlatformManager.cs" />
+    <Compile Include="Application\ThreadManager.cs" />
     <Compile Include="Common\Extensions\Common.cs" />
     <Compile Include="Libs\Diff.cs" />
     <Compile Include="PinballX\FileAccessManager.cs" />
