--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -232,6 +232,8 @@
     <Compile Include="Application\PlatformManager.cs" />
     <Compile Include="Application\ThreadManager.cs" />
     <Compile Include="Common\Extensions\Common.cs" />
+    <Compile Include="Common\Filesystem\Directory.cs" />
+    <Compile Include="Common\Filesystem\File.cs" />
     <Compile Include="Libs\Diff.cs" />
     <Compile Include="PinballX\FileAccessManager.cs" />
     <Compile Include="Vpdb\RealtimeManager.cs" />
