--- a/VpdbAgent/packages.config
+++ b/VpdbAgent/packages.config
@@ -5,6 +5,7 @@
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="net452" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
+  <package id="FluentAssertions" version="4.1.1" targetFramework="net452" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net452" />
   <package id="HashLib" version="2.0.1" targetFramework="net452" />
   <package id="Humanizer" version="1.37.7" targetFramework="net452" />
