--- a/VpdbAgent.Tests/VpdbAgent.Tests.csproj
+++ b/VpdbAgent.Tests/VpdbAgent.Tests.csproj
@@ -56,6 +56,10 @@
     <Reference Include="NLog">
       <HintPath>..\VpdbAgent\packages\NLog.4.2.1\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="PusherClient, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\VpdbAgent\packages\PusherClient.0.3.0\lib\net40\PusherClient.dll</HintPath>
+    </Reference>
     <Reference Include="ReactiveUI, Version=6.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\VpdbAgent\packages\reactiveui-core.6.5.0\lib\Net45\ReactiveUI.dll</HintPath>
@@ -103,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameManager.Test.cs" />
     <Compile Include="TestEnvironment.cs" />
     <Compile Include="MenuManager.Test.cs" />
     <Compile Include="Mocks\TestSchedulerManager.cs" />
