--- a/VpdbAgent.Tests/packages.config
+++ b/VpdbAgent.Tests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coveralls.net" version="0.6.0" targetFramework="net452" />
   <package id="FluentAssertions" version="4.1.1" targetFramework="net452" />
   <package id="JetBrains.dotMemoryUnit" version="2.1.20150828.125449" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
+  <package id="OpenCover" version="4.6.166" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
